--- a/templates/news.html
+++ b/templates/news.html
@@ -115,7 +115,7 @@
     <div class="container my-5">
         <div class="row">
             <!-- Sidebar -->
-            <div class="col-lg-4">
+            <div class="col-lg-3 col-md-4">
                 <div class="sticky-top" style="top: 100px;">
                     <!-- Categories Filter -->
                     {% if categories %}
@@ -195,7 +195,7 @@
             </div>
 
             <!-- Main Content -->
-            <div class="col-lg-8">
+            <div class="col-lg-9 col-md-8">
             {% if news_items %}
             <div class="news-timeline">
                 {% for item in news_items %}
