--- a/templates/news_item.html
+++ b/templates/news_item.html
@@ -7,7 +7,7 @@
 <div class="container py-5">
     <div class="row">
         <!-- Sidebar -->
-        <div class="col-lg-4">
+        <div class="col-lg-3 col-md-4">
             <!-- News Info -->
             <div class="card shadow-sm mb-4">
                 <div class="card-header bg-light">
@@ -46,7 +46,7 @@
         </div>
 
         <!-- Main Content -->
-        <div class="col-lg-8">
+        <div class="col-lg-9 col-md-8">
             <article>
                 <!-- Header -->
                 <header class="mb-5">
