--- a/templates/talk_detail.html
+++ b/templates/talk_detail.html
@@ -57,7 +57,7 @@
     <div class="container my-5">
         <div class="row">
             <!-- Sidebar -->
-            <div class="col-lg-4">
+            <div class="col-lg-3 col-md-4">
                 <!-- Talk Info -->
                 <div class="card shadow-sm mb-4">
                     <div class="card-header bg-light">
@@ -114,7 +114,7 @@
             </div>
 
             <!-- Main Content -->
-            <div class="col-lg-8">
+            <div class="col-lg-9 col-md-8">
                 <!-- Abstract -->
                 {% if talk.abstract %}
                 <div class="card shadow-sm mb-4">
