--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,16 @@
                             <i class="fas fa-chalkboard-teacher me-1"></i>{{ translations[lang]['nav_teaching'] }}
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if page == 'cv' %}active{% endif %}" href="/{{ lang }}/cv">
+                            <i class="fas fa-file-alt me-1"></i>{{ translations[lang]['nav_cv'] }}
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="/{{ lang }}/contact">
+                            <i class="fas fa-envelope me-1"></i>{{ translations[lang]['nav_contact'] }}
+                        </a>
+                    </li>
                 </ul>
                 
                 <!-- Language Switcher -->
